# quichole

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: client.rs  handshake.rs  lib.rs  main.rs  runtime.rs  service.rs
docs/: COMPARISON.md  CONFIGURATION.md  DEPLOYMENT.md  IMPLEMENTATION.md  OPERATIONS.md  PROTOCOL.md  SECURITY.md
shr/: Cargo.toml
shr/src/: lib.rs
shr/src/config/: client.rs  common.rs  logging.rs  mod.rs  server.rs
shr/src/crypto/: token.rs
shr/src/logging/: correlation.rs  mod.rs  redaction.rs  reload.rs
shr/src/protocol/: codec.rs  digest.rs  message.rs  mod.rs
shr/src/quic/: app.rs  connection.rs  forwarding.rs  framing.rs  mod.rs  stream.rs  tls_hooks.rs
svr/: Cargo.toml
svr/src/: handshake.rs  lib.rs  main.rs  runtime.rs  server.rs  service.rs
svr/tests/: e2e_handshake.rs  e2e_quic.rs  e2e_quic_mtls.rs
