[workspace]
members = ["shr", "svr", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["quichole contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/quichole"

[workspace.dependencies]
quiche = "0.24"
tokio-quiche = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
ring = "0.17"
bytes = { version = "1", features = ["serde"] }
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.minimal]
inherits = "release"
opt-level = "z"
