[package]
name = "quichole-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quichole-shr = { path = "../shr" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
toml.workspace = true
bytes.workspace = true
tokio-quiche.workspace = true
futures-util.workspace = true
serde.workspace = true
